--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículo Kaila muita mídia</title>
+    <link rel="stylesheet" 
+    href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Kaila muita mídia</h1>
+        <p>Estudante de Programação</p>
+    </header>
 </body>
 </html>
