--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <header>
         <h1>Kaila muita mídia</h1>
-        <p>Estudante de Programação</p>
+        <p>Estudante de Programação </p>
     </header>
+    <section>
+        <h2>Sobre mim</h2>
+        <p>sou proativa e legal</p>
+    </section>
 </body>
 </html>
